...
                    android:inputType="textPassword"
                    android:text="@={User.password}"
                    android:textColor="@color/lightSalomon"
                    android:textColorHint="@color/salomon" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_rectangle_button"
                    android:backgroundTint="@color/lightSalomon"
                    android:onClick="tryToLogin"
                    android:text="@string/log_in"
...
