<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.RegisterActivity">
    <data>
        <variable
            name="User"
            type="com.rolnik.alcoholapp.dto.User"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <com.rolnik.alcoholapp.views.CustomProgressBar
            android:id="@+id/customProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/registerRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/loadingImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/register"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/bar" />
            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:text="@={User.login}"
                android:textColor="@color/lightSalomon"
                android:textColorHint="@color/salomon" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@={User.email}"
                android:textColor="@color/lightSalomon"
                android:textColorHint="@color/salomon"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:text="@={User.password}"
                android:textColor="@color/lightSalomon"
                android:textColorHint="@color/salomon" />

            <EditText
                android:id="@+id/passwordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/lightSalomon"
                android:textColorHint="@color/salomon" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rectangle_button"
                android:backgroundTint="@color/lightSalomon"
                android:onClick="tryToRegister"
                android:text="@string/register"
                android:textColor="@color/grey" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>